@@ -25,6 +25,7 @@
 - SF patch #1550606  more configurable RSS feeds, also moves text to Messages.properties
 - SF patch #1544829  fixes SF bug #1544807 Browse-by-Subject/Author paging mechanism broken
 - SF patch #1543969  fixes SF bug #1543966 "Special" groups inside groups bug
+- SF patch #1550161  Fix HttpServletRequest encoding issues in 1.4
 
 (Jonathan Champ)
 - SF patch #1544089 fixes SF bug #1515148 community policies not deleting correctly
